Adicionando movimentacoes