@@ -3,6 +3,8 @@ package ufrn.bti.services;
 import java.io.FileReader;
 import java.io.IOException;
 import java.io.Reader;
+import java.text.SimpleDateFormat;
+import java.util.Date;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -19,6 +21,8 @@ import ufrn.bti.models.Cliente;
 import ufrn.bti.models.Conta;
 import ufrn.bti.models.ContaCorrente;
 import ufrn.bti.models.ContaPoupanca;
+import ufrn.bti.models.Movimentacao;
+import ufrn.bti.models.TipoMovimentacao;
 
 @Slf4j
 public class CsvService {
@@ -26,6 +30,7 @@ public class CsvService {
 	private final static String AGENCIA_PATH = "src/main/resources/agencia.csv";
     private final static String CLIENT_PATH = "src/main/resources/cliente.csv";
     private final static String CONTA_PATH = "src/main/resources/conta.csv";
+    private final static String MOVIMENTACAO_PATH = "src/main/resources/movimentacao.csv";
 
     private final static CSVFormat FORMAT_CSV = CSVFormat.DEFAULT.builder().build();
     
@@ -36,6 +41,7 @@ public class CsvService {
     	List<Agencia_> agencias = lerArquivoAgencia();
     	List<Cliente> clientes = lerArquivoCliente();
     	List<Conta> contas = lerArquivoConta(agencias, clientes);
+    	List<Movimentacao> movimentacoes = lerArquivoMovimentacao(); 
     	
     	clientes.forEach(c -> {
     		contas.forEach(co -> {
@@ -47,6 +53,7 @@ public class CsvService {
     	
     	banco.setClientes(clientes);
     	banco.setAgencias(agencias);
+    	log.info("{}", movimentacoes);
     	
     	return banco;
     }
@@ -78,7 +85,7 @@ public class CsvService {
             	agencias.add(agencia);
             }
         } catch (IOException e) {
-            log.error("Erro ao ler arquivo do banco", e);
+            log.error("Erro ao ler arquivo das agencias", e);
         }
         
         return agencias;
@@ -107,7 +114,7 @@ public class CsvService {
             }
             
         } catch (IOException e) {
-            log.error("Erro ao ler arquivo do banco", e);
+            log.error("Erro ao ler arquivo dos clientes", e);
         }
         
         return clientes;
@@ -139,19 +146,37 @@ public class CsvService {
             	contas.add(conta);
             }
         } catch (IOException e) {
-            log.error("Erro ao ler arquivo do banco", e);
+            log.error("Erro ao ler arquivo das contas", e);
         }
         
         return contas;
     }
     
-    public static Banco findBanco(Integer idBanco, List<Banco> bancos) {
+    public static List<Movimentacao> lerArquivoMovimentacao() {
+    	List<Movimentacao> movimentacoes = Lists.newArrayList();
     	
-    	Banco banco = bancos.stream().filter(b -> b.getId().equals(idBanco))
-    			.collect(Collectors.toList()).getFirst();
-    	
-    	return banco;
+        try (Reader in = new FileReader(MOVIMENTACAO_PATH)) {
+            Iterable<CSVRecord> records = FORMAT_CSV.parse(in);
+            for (CSVRecord record : records) {
+            	try {
+            		Date data = new SimpleDateFormat("dd-MM-yyyy hh:mm:ss").parse(record.get(0));
+            		TipoMovimentacao tipo = TipoMovimentacao.getTipoMovimentacao(Integer.valueOf(record.get(1)));
+            		Double valor = Double.valueOf(record.get(4));
+            		
+            		Movimentacao mov = new Movimentacao(data, tipo, record.get(2), record.get(3), valor);
+            		movimentacoes.add(mov);
+					
+				} catch (Exception e) {
+					log.info("Falha ao montar movimentação", e);
+				}
+            }
+        } catch (IOException e) {
+            log.error("Erro ao ler arquivo de movimentações", e);
+        }
+        
+        return movimentacoes;
     }
+    
     
     public static Agencia_ findAgencia(String idAgencia, List<Agencia_> agencias) {
     	
